tests/tests/errors/2006-32.vb
'#compiler-options:/win32manifest:
'#compiler-message:Command line error BC2006 : option 'win32manifest' requires ':<file>'
'#exit-code:1